--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -1,3 +1,9 @@
+<head>
+<style>
+body { background-color: #2E6F40; }
+<style>
+</head>
+
 {% include base_path %}
 
 {% if page.author and site.data.authors[page.author] %}
