--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,9 @@
+</head>
+<style>
+body { background-color: #2e6f40; }
+<style>
+</head>
+  
 {% include base_path %}
 
 {% if page.author_profile or layout.author_profile or page.sidebar %}
