--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -30,7 +30,7 @@ $sidebar-screen-min-width   : 1024px;
 :root {
     --global-base-color                 : #{$primary-color};
     --global-bg-color                   : #fff;
-    --global-footer-bg-color            : #003300 /*#f2f3f3;*/
+    --global-footer-bg-color            : #003300; /*#f2f3f3;*/
     --global-border-color               : #{$lighter-gray};
     --global-dark-border-color          : #bdc1c4;
     --global-code-background-color      : #fafafa;
