--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,12 @@
+<head>
+<style>
+  body {
+  color: #fff;
+  background-color: #003300;
+  }
+</style>
+</head>
+
 {% include base_path %}
 
 {% if page.author_profile or layout.author_profile or page.sidebar %}
