--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -31,8 +31,8 @@ $sidebar-screen-min-width   : 1024px;
     --global-base-color                 : #{$primary-color};
     --global-bg-color                   : #fff;
     --global-footer-bg-color            : #003300; /*#f2f3f3;*/
-    --global-border-color               : #{$lighter-gray};
-    --global-dark-border-color          : #bdc1c4;
+    --global-border-color               : #003300; /*{$lighter-gray};*/
+    --global-dark-border-color          : #003300; /*#bdc1c4;*/
     --global-code-background-color      : #fafafa;
     --global-code-text-color            : #{$darker-gray};
     --global-fig-caption-color          : mix(#fff,  #{$dark-gray}, 25%);
